[gd_scene load_steps=22 format=3 uid="uid://bmkhjcwypndod"]

[ext_resource type="Texture2D" uid="uid://dmdpioncoyibh" path="res://assets/ribbert-export.png" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://d2o1aojlpv8oj" path="res://assets/ribbert.png" id="2_qi2p4"]
[ext_resource type="Script" uid="uid://b60fn75vfqoxc" path="res://enemy.gd" id="3_qi2p4"]
[ext_resource type="AudioStream" uid="uid://d4inl26y0jxcy" path="res://splash.mp3" id="4_iifgy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qi2p4"]
radius = 13.0

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("1_4gyqm")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("1_4gyqm")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("1_4gyqm")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("1_4gyqm")
region = Rect2(384, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("1_4gyqm")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("1_4gyqm")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("1_4gyqm")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("1_4gyqm")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("1_4gyqm")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("1_4gyqm")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("1_4gyqm")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("1_4gyqm")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("2_qi2p4")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_iifgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}],
"loop": true,
"name": &"Move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}],
"loop": true,
"name": &"Move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_nnovl")
}],
"loop": false,
"name": &"squashed",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2p4"]
size = Vector2(41, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iifgy"]
size = Vector2(58, 8)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("3_qi2p4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 17)
shape = SubResource("CircleShape2D_qi2p4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -2)
sprite_frames = SubResource("SpriteFrames_iifgy")
animation = &"squashed"
frame = 4
frame_progress = 0.6870483

[node name="StompBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompBox"]
position = Vector2(4.5, -0.25)
shape = SubResource("RectangleShape2D_qi2p4")

[node name="AttackBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(3, 16)
shape = SubResource("RectangleShape2D_iifgy")

[node name="SplashSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_iifgy")
